--- a/fm-lumen/composer.json
+++ b/fm-lumen/composer.json
@@ -6,10 +6,12 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
+        "flipbox/lumen-generator": "^8.2",
         "laravel/lumen-framework": "^8.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel/ui": "^3.3",
         "mockery/mockery": "^1.3.1",
         "phpunit/phpunit": "^9.3"
     },
