--- a/fm-lumen/composer.json
+++ b/fm-lumen/composer.json
@@ -6,9 +6,10 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
+        "ext-json": "*",
         "flipbox/lumen-generator": "^8.2",
-        "laravel/lumen-framework": "^8.0",
-      "ext-json": "*"
+        "fruitcake/laravel-cors": "^2.0",
+        "laravel/lumen-framework": "^8.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
