--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
 fm-lumen/vendor
 fm-nuxt
 fm-nuxt-new/node_modules
+
+/fm-laravel/storage
+
+/fm-laravel/node_modules
+fm-laravel/public/hot
+fm-laravel/public/storage
+fm-laravel/storage/*.key
+fm-laravel/vendor
+fm-laravel/.env
+fm-laravel/.env.backup
+fm-laravel/.phpunit.result.cache
+fm-laravel/docker-compose.override.yml
+fm-laravel/Homestead.json
+fm-laravel/Homestead.yaml
+fm-laravel/npm-debug.log
+fm-laravel/yarn-error.log
+fm-laravel/.idea
+fm-laravel/.vscode
